# tracktour-experiments

./: README.md  pyproject.toml  ucb_policies.py.lprof
pipelines/: ducb_pipeline.ipynb  ducb_pipeline.py  err_seg_all_pipeline_no_merges.ipynb  evaluate.py  gt_no_div_pipeline.ipynb  no_div_constraint_pipeline.ipynb  runner_experiment.py  solve_w_custom_seg.ipynb  solve_wout_merge_capacity.ipynb  trackastra_training.ipynb
src/tracktour_experiments/: experiment_schema.py  generate_configs.py  generate_dataset_summary.py  ucb_policies.py  utils.py
src/tracktour_experiments.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
