[build-system]
requires = ["setuptools>=42", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tracktour-experiments"
dynamic = ["version"]
description = "A project for tracktour experiments"
authors = [{ name = "Draga Doncila Pop", email = "ddoncila@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "pydantic>=2"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ['src']

